2008-09-14  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-userstats.py.in
	(PokerUserStatsTestCase.test02_factory): Fixed test to use
	Lookup class.

	* pokernetwork/userstats.py (UserStatsLookup): Created class.
	(UserStatsRankLevelLookup): Created class.
	(UserStatsFactory.error): Added "Lookup" to end of required class
	string.

	* tests/test-userstats.py.in
	(PokerUserStatsTestCase.test01_baseClass): Renamed to
	test01_userStatsAccessorBaseClass and rewrote.
	(PokerUserStatsTestCase.test02_rankLevel): Renamed to
	test03_rankLevelAccessor and rewrote.

	* pokernetwork/userstats.py (UserStatsAccessor): reworked
	UserStats class into UserStatsAccessor.

2008-09-13  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-userstats.py.in: Created file.
	(PokerUserStatsTestCase.test01_baseClass): Wrote test.
	(PokerUserStatsTestCase.test02_factory): Wrote test.

	* pokernetwork/userstats.py (UserStats): Created class and file.

2008-09-10  Bradley M. Kuhn  <bkuhn@ebb.org>

	* pokernetwork/pokerpackets.py: Added info about tourney break
	packets to Q&A comments at top of file.

	* tests/test-pokerservice.py.in
	(BreakTestCase.test_tourneyBreakResume): Renamed test to
	test11_tourneyBreakResume.
	(BreakTestCase.test11_tourneyBreakResume): Changed test to handle
	additional table.broadcast()'d packets.
	(BreakTestCase.Table.broadcastMessage): Added self.type assignment.
	(BreakTestCase.Table.__init__): Added self.type assignment.

	* pokernetwork/pokerservice.py (PokerService.tourneyBreakResume):
	Added table.broadcast of PacketPokerTableTourneyBreakDone.

2008-09-09  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerservice.py.in (BreakTestCase.test08_tourneyNewState_tourneyBreak):
	Wrote test, coverage for changes below in pokerservice.py

2008-09-08  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerservice.py.in
	(BreakTestCase.test01_tourneyNewState_noCallbacksNeeded): Renamed
	test to test01_tourneyNewState_simpleTransitions.
