@@ -1,11 +1,19 @@
 2008-09-14  Bradley M. Kuhn  <bkuhn@ebb.org>
 
+	* tests/test-userstats.py.in (PokerUserStatsTestCase.MockTable):
+	Created mock up.
+	(PokerUserStatsTestCase.MockService): created mock up.
+	(PokerUserStatsTestCase.MockAvatar): created mock up.
+
+	* pokernetwork/userstats.py
+	(UserStatsRankPercentileAccessor._lookupValidStat): Wrote method.
+
 	* tests/test-userstats.py.in
 	(PokerUserStatsTestCase.test02_factory): Fixed test to use
 	Lookup class.
 
 	* pokernetwork/userstats.py (UserStatsLookup): Created class.
-	(UserStatsRankLevelLookup): Created class.
+	(UserStatsRankPercentileLookup): Created class.
 	(UserStatsFactory.error): Added "Lookup" to end of required class
 	string.
 
@@ -13,7 +21,7 @@
 	(PokerUserStatsTestCase.test01_baseClass): Renamed to
 	test01_userStatsAccessorBaseClass and rewrote.
 	(PokerUserStatsTestCase.test02_rankLevel): Renamed to
-	test03_rankLevelAccessor and rewrote.
+	test03_rankPercentileAccessor and rewrote.
 
 	* pokernetwork/userstats.py (UserStatsAccessor): reworked
 	UserStats class into UserStatsAccessor.
